manifests/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: chat-app
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: chat-app
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
